OpenVi 7.0.12 -> OpenVi 7.0.15: Thu Feb 24 12:18:33 2022
        + Avoid O_PATH clash in source proper (rather than in awk script)
        + Remove deprecated interpreter internals documentation
        + Actually use `pledge()` for SerenityOS and OpenBSD 5.9 or later
        + Add `superstrip` (aka `sstrip`) `GNUmakefile` target to
          aggressively strip the compiled binary using `sstrip` if available
        + Add `upx` `GNUmakefile` target to compress the compiled binary
          using `upx` if available
        + Cosmetic clean-up of `GNUmakefile` and normalize to 79-columns
        + MSYS2 is also supported, tested with MSYS2 on Windows 11 (x86_64)
        + Add support for Cygwin, tested with Cygwin64 on Windows 11 (x86_64)
        + Update `README.md` to document usage for `LIBS` variable, correct
          `OPTFLAGS` to `OPTLEVEL`, expand external links and information,
          add citations regarding past multibyte efforts, use fancy quotes,
          and correctly state that the traditional `ex` / `vi` was part of
          the *first* Berkeley Software Distribution, mention OpenBSD's
          standard secure coding practices, safe(r) functions, and ISC license
        + Respect `LIBS` to set/override the default libraries for linking
        + Make failure to strip non-fatal; fixes `install-strip` and `strip`
          in the case where `./bin/vi` is un-strippable (i.e. `bin/vi` is
          `upx` compressed or missing section headers from `sstrip`ing)
        + Fixes for `vi` recovery mode. From `trondd@`, tested by various,
          ok `afresh1@`; this advances OpenBSD release date to 02/20/2022
        + Update `.gitignore` to add `compile_commands.json`
        + Suppress a few possible warnings
        + Since HiDPI screens are more common, allow terminal dimensions of
          3640x2048; this might need to be further extended for 4K displays

OpenVi 7.0.11 -> OpenVi 7.0.12: Sun Feb 20 12:57:42 2022